fix login modal size on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -816,7 +816,7 @@ $pd-desktop: 24px;
     background-color: white;
     width: 90%;
     height: auto;
-    max-height: 90vh;
+    max-height: 90%;
     margin: 0 auto;
     padding: 32px;
     border: 1px solid #ccc;
@@ -828,7 +828,6 @@ $pd-desktop: 24px;
 
     @media screen and (min-width: 768px) {
       top: 20%;
-      width: 60%;
       max-width: 620px;
       padding: 40px;
     }
